1.2.2
-----
Easier to keep homepage up-to-date.

Added IntegerPool, which manages a pool of shareable, read-only Integer 
objects in a fixed range. This is used in several places where Integer 
objects were previously created and then GCed.

In various places, used Collections API features to speed things up. 
For example, java.util.List.toArray() will do a System.arraycopy, if 
given a big enough array to copy into. This is, therefore, much
faster.

Added getAllOutcomes() method in GISModel to show the String names of
all outcomes matched up with their normalized probabilities.


1.2.0
-----
Changed license to LGPL.

Added build.xml file to be used with the build tool Jakarta Ant.

Work sponsored by Electric Knowledge:
    Added BasicEnglishAffixes class to perform basic morphological
    stemming for English.

Fixed a bug pointed out by Chieu Hai Leong in which the model would
not train properly in situations where the number of features was
constant (and therefore, no correction features need to be computed).

The top level package name has changed from quipu to opennlp.  Thus,
what was "quipu.maxent" is now "opennlp.maxent".  See
http://www.opennlp.com for more details.

Lots of little tweaks to reduce memory consumption.

Several changes sponsored by eTranslate Inc:

  * The new opennlp.maxent.io subpackage.  The input/output system for
    models is now designed to facilitate storing and retrieving of
    models in different formats.  At present, GISModelReaders and
    GISModelWriters have been supplied for reading and writing plain
    text and binary files and either can be gzipped or
    uncompressed. The OldFormatGISModelReader can be used to read old
    models (from Maxent 1.0), and also provides command line
    functionality to convert old models to a new format.  Also,
    SuffixSensitiveGISModelReader and SuffixSensitiveGISModelWriter
    have been provided to allow models to be stored and retrieved